# interview-prep-app

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/.deepeval/: .deepeval_telemetry.txt
backend/app/: __init__.py  config.py  cv_parser.py  input_guard.py  interview_engine.py  llm.py  main.py  prompts.py  schemas.py  session_store.py
backend/bakeoff/: metrics.py  openrouter_model.py  run.py
backend/tests/: conftest.py  test_cv_parser.py  test_finish_endpoint.py  test_input_guard.py  test_interview_engine.py  test_llm.py  test_reply_endpoint.py  test_resolve_transition.py  test_schemas.py  test_session_store.py  test_start_endpoint.py  test_upload_cv.py
docs/: prd.md
docs/design/: design.dc.html
docs/issues/: 001-walking-skeleton-stub-llm.md  002-real-openrouter-call-usage.md  003-cv-upload-parse-preview.md  004-jd-paste-start-validation.md  005-start-classify-plan-first-question.md  006-answer-loop-bounded-followup.md  007-finish-structured-scorecard.md  008-security-hardening-stay-on-task.md  009-per-session-cost-meter.md  010-prompt-bakeoff-writeup.md  011-jailbreak-experiment-log.md  012-stretch-deepeval-evaluation.md  013-stretch-vision-cv-fallback.md  014-interview-latency-performance.md  015-deepeval-stay-on-task-check.md
docs/problems/: 001-interviewer-mega-questions-persist.md  002-streamed-questions-lose-schema-guard.md
docs/security/: jailbreak-log.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Header.tsx  InterviewView.tsx  ScorecardView.tsx  SessionCostFooter.tsx  SetupView.tsx
(+3 files in other folders)
